dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: kuber-dp
    labels:
        app: kuber-dp
spec:
    replicas: 3
    selector:
        matchLabels:
            env: dev
    template:
        metadata:
            labels:
                env: dev
        spec:
            containers:
            -   name: app-kuber-container
                image: stepchig/testproject:latest
                imagePullPolicy: "Always"
                ports:
                   - containerPort: 8000
