pod.yaml
apiVersion: v1
kind: Pod
metadata: 
    name: app-kuber
    labels:
        env: dev
spec:
    containers:
    -   name: app-kuber-container
        image: stepchig/testproject:latest
        ports:
        - containerPort: 8000
